# buffer.c

./: .gitignore  CMakeLists.txt  Makefile
include/buffer/: buffer.h
src/: buffer.c
